[package]
name = "async-process-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-process = "1.4.0"
futures-lite = "1.12.0"
tokio = { version = "1.18.2", features = ["full"] }
