[package]
name = "sea-orm-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
sea-orm = { version = "0.8.0", features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros"] }
tokio = { version = "1.18.2", features = ["full"] }
