[package]
name = "sqlx-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
sqlx = { version = "0.5.13", features = ["sqlite","runtime-tokio-rustls"] }
tokio = { version = "1.18.2", features = ["full"] }
